--- a/bonPlans.html
+++ b/bonPlans.html
@@ -1,48 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Nos bons plans – formules et offres gourmandes à petits prix.">
+    <meta name="robots" content="index,follow">
+    <meta name="theme-color" content="#4740F9">
+    <meta name="color-scheme" content="light">
+    <meta property="og:locale" content="fr_FR">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Restaurant LGC – Bons plans">
+    <meta property="og:description" content="Découvrez nos formules savoureuses à prix Tasty.">
+    <meta property="og:url" content="/bonPlans.html">
+    <meta property="og:image" content="/asset/menu-bonplans.jpg">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/android-chrome-512x512.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="favicon/site.webmanifest">
     <link rel="stylesheet" href="./css/burger.css">
-    <title>Bon plans</title>
+    <title>Restaurant LGC – Bons plans</title>
 </head>
 <body>
+    <a href="#contenu" class="skip-link">Aller au contenu principal</a>
     <header>
             <figure class="logo">
                 <figcaption>
-                     <a href="./index.html"><img src="./asset/logo_lgc.png" alt="La grande classe"></a>
+                     <a href="./index.html"><img src="./asset/logo_lgc.png" alt="Logo La cantine LGC"></a>
                 </figcaption>
             </figure>
-            <nav>
+            <nav id="menu-principal" aria-label="Navigation principale">
                 <ul>
                     <li><a href="./index.html" class="nav-link">Accueil</a></li>
-                    <li class="separateur"></li>
-                    <li><a href="./menu.html" class="nav-link active">Menu</a></li>
-                    <li class="separateur"></li>
+                    <li class="separateur" aria-hidden="true" role="presentation"></li>
+                    <li><a href="./menu.html" class="nav-link active" aria-current="page">Menu</a></li>
+                    <li class="separateur" aria-hidden="true" role="presentation"></li>
                     <li><a href="./reservation.html" class="nav-link">Reservation</a></li>
-                    <li class="separateur"></li>
+                    <li class="separateur" aria-hidden="true" role="presentation"></li>
                     <li><a href="./galerie.html" class="nav-link">Galerie</a></li>
-                    <li class="separateur"></li>
+                    <li class="separateur" aria-hidden="true" role="presentation"></li>
                     <li><a href="./apropos.html" class="nav-link">A propos</a></li>
-                    <li class="separateur"></li>
+                    <li class="separateur" aria-hidden="true" role="presentation"></li>
                     <li><a href="./contact.html" class="nav-link">Contact</a></li>
-                    <li class="last-separateur"></li>
+                    <li class="last-separateur" aria-hidden="true" role="presentation"></li>
                 </ul>
                 <button class="btn-command">Commander</button>
             </nav>
-            <div class="burger-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
+            <div class="icon-cart">
+                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 4h1.5L9 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-8.5-3h9.25L19 7H7.312"/>
+                </svg>
+                <span>0</span>
             </div>
+            <button class="burger-menu" type="button" aria-label="Ouvrir le menu" aria-controls="menu-principal" aria-expanded="false">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
     </header>
     <!--Mon main -->
-    <main>
+    <main id="contenu">
            <section class="premiere-section">
                 <aside>
                     <a href="./menu.html"><h2><img src="./asset/carte.png" alt="icone de carte">Notre carte</h2></a>
@@ -72,57 +88,65 @@
                             <figcaption>
                                 <p>Bon plans Tasty<br>6.50€</p>
                             </figcaption>
-                            <img src="./asset/bonplan1.jpg" alt="Image burger Tasty">
+                            <img src="./asset/bonplan1.jpg" alt="Image burger Tasty" loading="lazy" width="600" height="600">
                         </figure>
                         <figure data-burger-name="Les touterreaux" data-burger-price="6" data-burger-image="./asset/bonplan2.jpg">
                             <figcaption>
                                 <p>Les touterreaux<br>6€</p>
                             </figcaption>
-                            <img src="./asset/bonplan2.jpg" alt="Donnut burger">
+                            <img src="./asset/bonplan2.jpg" alt="Donnut burger" loading="lazy" width="600" height="600">
                         </figure>
                         <figure data-burger-name="Good Tasty" data-burger-price="4" data-burger-image="./asset/bonplan3.jpg">
                             <figcaption>
                                 <p>Good tasty<br>4€</p>
                             </figcaption>
-                            <img src="./asset/bonplan3.jpg" alt="Image burger végétal">
+                            <img src="./asset/bonplan3.jpg" alt="Image burger végétal" loading="lazy" width="600" height="600">
                         </figure>
                         <figure data-burger-name="Big Tasty" data-burger-price="5" data-burger-image="./asset/bonplan4.jpg">
                             <figcaption>
                                 <p>Big tasty<br>5€</p>
                             </figcaption>
-                            <img src="./asset/bonplan4.jpg" alt="Image classique">
+                            <img src="./asset/bonplan4.jpg" alt="Image classique" loading="lazy" width="600" height="600">
                         </figure>
                         <figure data-burger-name="Frittes Tasty" data-burger-price="5" data-burger-image="./asset/bonplan5.jpg">
                             <figcaption>
                                 <p>Frittes tasty<br>5€</p>
                             </figcaption>
-                            <img src="./asset/bonplan5.jpg" alt="Image Cheddar-Bacon-Caramélisé">
+                            <img src="./asset/bonplan5.jpg" alt="Image Cheddar-Bacon-Caramélisé" loading="lazy" width="600" height="600">
                         </figure>
                         <figure data-burger-name="L'européenne" data-burger-price="6.50" data-burger-image="./asset/bonplan6.jpg">
                             <figcaption>
                                 <p>L'européenne<br>6.50€</p>
                             </figcaption>
-                            <img src="./asset/bonplan6.jpg" alt="Image Le régional">
+                            <img src="./asset/bonplan6.jpg" alt="Image Le régional" loading="lazy" width="600" height="600">
                         </figure>
                         <figure data-burger-name="Les délices" data-burger-price="4" data-burger-image="./asset/bonplan7.jpg">
                             <figcaption>
                                 <p>Les délices<br>4€</p>
                             </figcaption>
-                            <img src="./asset/bonplan7.jpg" alt="Image Le créatif">
+                            <img src="./asset/bonplan7.jpg" alt="Image Le créatif" loading="lazy" width="600" height="600">
                         </figure>
                         <figure data-burger-name="Le Petit Prince" data-burger-price="5" data-burger-image="./asset/burger-menu8.png">
                             <figcaption>
                                 <p>Le Petit Prince<br>5€</p>
                             </figcaption>
-                            <img src="./asset/burger-menu8.png" alt="Image Le Petit Prince">
+                            <img src="./asset/burger-menu8.png" alt="Image Le Petit Prince" loading="lazy" width="600" height="600">
                         </figure>
                     </div>
                     <div id="popupAjoutPanier" class="hidden">
-                        <h4>Le Bon Gout</h4>
+                        <h4>La cantine LGC</h4>
                         <p id="popup-content"></p>
                         <img id="popup-image" src="" alt="">
                         <span class="close"><ion-icon name="close-outline" alt="Image du produit"></ion-icon></span>
                         <button type="button">Ajouter au panier</button> 
+                    </div>
+                    <div class="cartTab">
+                        <h3>Votre panier</h3>
+                        <div class="listCart"></div>
+                        <div class="btn">
+                            <button class="close-btn">FERMER</button>
+                            <button class="checkout">VALIDER</button>
+                        </div>
                     </div>
                     <div class="section-menu-burger">
                     <h2>Restaurant LGC</h2>
@@ -165,8 +189,8 @@
             </figcaption>
         </figure>
     </footer>
-    <script src="./js/pages.js"></script>
-    <script src="./js/ajoutPanier.js"></script>
+    <script type="module" src="./js/pages/shop.js"></script>
+    <script type="module" src="./js/pages.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
