--- a/burger.html
+++ b/burger.html
@@ -1,37 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Nos burgers maison – savoureux et préparés avec des ingrédients frais.">
+    <meta name="robots" content="index,follow">
+    <meta name="theme-color" content="#4740F9">
+    <meta name="color-scheme" content="light">
+    <meta property="og:locale" content="fr_FR">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Restaurant LGC – Burgers">
+    <meta property="og:description" content="Découvrez notre sélection de burgers.">
+    <meta property="og:url" content="/burger.html">
+    <meta property="og:image" content="/asset/burger-menu.jpg">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/android-chrome-512x512.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="favicon/site.webmanifest">
     <link rel="stylesheet" href="./css/burger.css">
     <title>Nos Burgers</title>
 </head>
 <body>
+    <a href="#contenu" class="skip-link">Aller au contenu principal</a>
     <header>
             <figure class="logo">
                 <figcaption>
-                     <a href="./index.html"><img src="./asset/logo_lgc.png" alt="La grande classe"></a>
+                     <a href="./index.html"><img src="./asset/logo_lgc.png" alt="Logo La cantine LGC"></a>
                 </figcaption>
             </figure>
-            <nav>
+            <nav id="menu-principal" aria-label="Navigation principale">
                 <ul>
                     <li><a href="./index.html" class="nav-link">Accueil</a></li>
-                    <li class="separateur"></li>
-                    <li><a href="./menu.html" class="nav-link active">Menu</a></li>
-                    <li class="separateur"></li>
+                    <li class="separateur" aria-hidden="true" role="presentation"></li>
+                    <li><a href="./menu.html" class="nav-link active" aria-current="page">Menu</a></li>
+                    <li class="separateur" aria-hidden="true" role="presentation"></li>
                     <li><a href="./reservation.html" class="nav-link">Reservation</a></li>
-                    <li class="separateur"></li>
+                    <li class="separateur" aria-hidden="true" role="presentation"></li>
                     <li><a href="./galerie.html" class="nav-link">Galerie</a></li>
-                    <li class="separateur"></li>
+                    <li class="separateur" aria-hidden="true" role="presentation"></li>
                     <li><a href="./apropos.html" class="nav-link">A propos</a></li>
-                    <li class="separateur"></li>
+                    <li class="separateur" aria-hidden="true" role="presentation"></li>
                     <li><a href="./contact.html" class="nav-link">Contact</a></li>
-                    <li class="last-separateur"></li>
+                    <li class="last-separateur" aria-hidden="true" role="presentation"></li>
                 </ul>
                 <button type="button" class="btn-command">Commander</button>
             </nav>
@@ -42,14 +52,14 @@
                 <span>0</span>
                   
             </div>
-            <div class="burger-menu">
+            <button class="burger-menu" type="button" aria-label="Ouvrir le menu" aria-controls="menu-principal" aria-expanded="false">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
-            </div>
+            </button>
     </header>
     <!--Mon main -->
-    <main>
+    <main id="contenu">
            <section class="premiere-section">
                 <aside>
                     <a href="./menu.html"><h2><img src="./asset/carte.png" alt="icone de carte">Notre carte</h2></a>
@@ -79,59 +89,59 @@
                             <figcaption>
                                 <p>Burger Tasty<br>6€</p>
                             </figcaption>
-                            <img src="./asset/burger-menu1.png" alt="Image burger Tasty">
+                            <img src="./asset/burger-menu1.png" alt="Image burger Tasty" loading="lazy" width="600" height="600">
                         </figure>
                         <figure data-burger-name="Buggy Burger" data-burger-price="5" data-burger-image="./asset/burger-menu2.png">
                             <figcaption>
                                 <p>Buggy Burger<br>5€</p>
                             </figcaption>
-                            <img src="./asset/burger-menu2.png" alt="Donnut burger">
+                            <img src="./asset/burger-menu2.png" alt="Donnut burger" loading="lazy" width="600" height="600">
                         </figure>
                         <figure data-burger-name="Burger Végétal" data-burger-price="7.30" data-burger-image="./asset/burger-menu3.png">
                             <figcaption>
                                 <p>Kinder surprise<br>7.30€</p>
                             </figcaption>
-                            <img src="./asset/burger-menu3.png" alt="Image burger végétal">
+                            <img src="./asset/burger-menu3.png" alt="Image burger végétal" loading="lazy" width="600" height="600">
                         </figure>
                         <figure data-burger-name="Le classique" data-burger-price="5.30" data-burger-image="./asset/burger-menu4.png">
                             <figcaption>
                                 <p>Le classique<br>5.30€</p>
                             </figcaption>
-                            <img src="./asset/burger-menu4.png" alt="Image classique">
+                            <img src="./asset/burger-menu4.png" alt="Image classique" loading="lazy" width="600" height="600">
                         </figure>
                         <figure data-burger-name="Bacon-Burger" data-burger-price="8" data-burger-image="./asset/burger-menu5.png">
                             <figcaption>
                                 <p>Bacon-Burger<br>8€</p>
                             </figcaption>
-                            <img src="./asset/burger-menu5.png" alt="Image Cheddar-Bacon-Caramélisé">
+                            <img src="./asset/burger-menu5.png" alt="Image Cheddar-Bacon-Caramélisé" loading="lazy" width="600" height="600">
                         </figure>
                         <figure data-burger-name="Le Régional" data-burger-price="9" data-burger-image="./asset/burger-menu8.png">
                             <figcaption>
                                 <p>Le Régional<br>9€</p>
                             </figcaption>
-                            <img src="./asset/burger-menu8.png" alt="Image Le régional">
+                            <img src="./asset/burger-menu8.png" alt="Image Le régional" loading="lazy" width="600" height="600">
                         </figure>
                         <figure data-burger-name="Le Créatif" data-burger-price="7.50" data-burger-image="./asset/burger-menu7.png">
                             <figcaption>
                                 <p>Le Créatif<br>7.50€</p>
                             </figcaption>
-                            <img src="./asset/burger-menu7.png" alt="Image Le créatif">
+                            <img src="./asset/burger-menu7.png" alt="Image Le créatif" loading="lazy" width="600" height="600">
                         </figure>
                         <figure data-burger-name="Le petit prince" data-burger-price="5" data-burger-image="./asset/burger-menu9.png">
                             <figcaption>
                                 <p>Le petit prince<br>5€</p>
                             </figcaption>
-                            <img src="./asset/burger-menu9.png" alt="Image Le Petit Prince">
+                            <img src="./asset/burger-menu9.png" alt="Image Le Petit Prince" loading="lazy" width="600" height="600">
                         </figure>
                         <figure data-burger-name="Le Star Wars" data-burger-price="5" data-burger-image="./asset/burger-menu3.png">
                             <figcaption>
                                 <p>Le Star Wars<br>5€</p>
                             </figcaption>
-                            <img src="./asset/burger-menu3.png" alt="Image Le Petit Prince">
+                            <img src="./asset/burger-menu3.png" alt="Image Le Petit Prince" loading="lazy" width="600" height="600">
                         </figure>
                     </div>
                     <div id="popupAjoutPanier" class="hidden">
-                        <h4>Le Bon Gout</h4>
+                        <h4>La cantine LGC</h4>
                         <p id="popup-content"></p>
                         <img id="popup-image" src="" alt="">
                         <span class="close"><ion-icon name="close-outline" alt="Image du produit"></ion-icon></span>
@@ -203,9 +213,7 @@
             </figcaption>
         </figure>
     </footer>
-    <script src="./pages.js"></script>
-    <script src="./js/ajoutPanier.js"></script>
-    <script src="./js/panier.js"></script>
+    <script type="module" src="./js/pages/burger.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
