--- a/galerie.html
+++ b/galerie.html
@@ -2,69 +2,77 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Galerie photo du Restaurant LGC – découvrez l'ambiance et nos plats maison.">
+    <meta name="robots" content="index,follow">
+    <meta name="theme-color" content="#4740F9">
+    <meta name="color-scheme" content="light">
+    <meta property="og:locale" content="fr_FR">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Restaurant LGC – Galerie">
+    <meta property="og:description" content="Photos du restaurant et de nos spécialités maison.">
+    <meta property="og:url" content="/galerie.html">
+    <meta property="og:image" content="/asset/galerie/galery1.jpg">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/android-chrome-512x512.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="favicon/site.webmanifest">
     <link rel="stylesheet" href="./css/galerie.css">
-    <link rel="stylesheet" href="https://fontawesome.com/icons/angle-left?f=classic&s=solid&pc=%2363E6BE&sc=%2363E6BE">
-    <link rel="stylesheet" href="https://fontawesome.com/icons/angle-right?f=classic&s=solid&pc=%2374C0FC&sc=%2374C0FC">
-    <title>La grande classe - le restaurant</title>
+    <title>Restaurant LGC – Galerie</title>
 </head>
 <body>
+    <a href="#contenu" class="skip-link">Aller au contenu principal</a>
     <header>
             <figure class="logo">
                 <figcaption>
-                    <a href="./index.html"><img src="./asset/logo_lgc.png" alt="La grande classe"></a>
+                    <a href="./index.html"><img src="./asset/logo_lgc.png" alt="Logo La cantine LGC"></a>
                 </figcaption>
             </figure>
-            <nav>
+            <nav id="menu-principal" aria-label="Navigation principale">
                 <ul>
                     <li><a href="./index.html" class="nav-link">Accueil</a></li>
-                    <li class="separateur"></li>
+                    <li class="separateur" aria-hidden="true" role="presentation"></li>
                     <li><a href="./menu.html" class="nav-link">Menu</a></li>
-                    <li class="separateur"></li>
+                    <li class="separateur" aria-hidden="true" role="presentation"></li>
                     <li><a href="./reservation.html" class="nav-link">Reservation</a></li>
-                    <li class="separateur"></li>
-                    <li><a href="./galerie.html" class="nav-link active">Galerie</a></li>
-                    <li class="separateur"></li>
+                    <li class="separateur" aria-hidden="true" role="presentation"></li>
+                    <li><a href="./galerie.html" class="nav-link active" aria-current="page">Galerie</a></li>
+                    <li class="separateur" aria-hidden="true" role="presentation"></li>
                     <li><a href="./apropos.html" class="nav-link">A propos</a></li>
-                    <li class="separateur"></li>
+                    <li class="separateur" aria-hidden="true" role="presentation"></li>
                     <li><a href="./contact.html" class="nav-link">Contact</a></li>
-                    <li class="last-separateur"></li>
+                    <li class="last-separateur" aria-hidden="true" role="presentation"></li>
                 </ul>
                 <button class="btn-command">Commander</button>
             </nav>
-            <div class="burger-menu">
+            <button class="burger-menu" type="button" aria-label="Ouvrir le menu" aria-controls="menu-principal" aria-expanded="false">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
-            </div>
+            </button>
     </header>
     <!--Mon main -->
-    <main>
+    <main id="contenu">
         <section class="presentation">
             <h1>GALERIE</h1>
             <p>"Découvrez notre galerie d'images"</p>
         </section>  
         <Section class="galery">
             <div class="galery-container">
-                <div class="galery-item" data-index="1"><img src="./asset/galerie/galery1.jpg" alt=""></div>
-                <div class="galery-item" data-index="2"><img src="./asset/galerie/galery2.jpg" alt=""></div>
-                <div class="galery-item" data-index="3"><img src="./asset/galerie/galery3.jpg" alt=""></div>
-                <div class="galery-item" data-index="4"><img src="./asset/galerie/galery4.jpg" alt=""></div>
-                <div class="galery-item" data-index="5"><img src="./asset/galerie/galery5.jpg" alt=""></div>
-                <div class="galery-item" data-index="6"><img src="./asset/galerie/galery7.jpg" alt=""></div>
-                <div class="galery-item" data-index="7"><img src="./asset/galerie/galery8.jpg" alt=""></div>
-                <div class="galery-item" data-index="8"><img src="./asset/galerie/galery9.jpg" alt=""></div>
-                <div class="galery-item" data-index="9"><img src="./asset/galerie/galery10.jpg" alt=""></div>
-                <div class="galery-item" data-index="10"><img src="./asset/galerie/galery11.jpg" alt=""></div>
-                <div class="galery-item" data-index="11"><img src="./asset/galerie/galery12.jpg" alt=""></div>
-                <div class="galery-item" data-index="12"><img src="./asset/galerie/galery13.jpg" alt=""></div>
-                <div class="galery-item" data-index="13"><img src="./asset/galerie/gakery14.jpg" alt=""></div>
-                <div class="galery-item" data-index="14"><img src="./asset/galerie/galery15.jpg" alt=""></div>
+                <div class="galery-item" data-index="1"><img src="./asset/galerie/galery1.jpg" alt="Photo 1 de la galerie" loading="lazy" width="600" height="400"></div>
+                <div class="galery-item" data-index="2"><img src="./asset/galerie/galery2.jpg" alt="Photo 2 de la galerie" loading="lazy" width="600" height="400"></div>
+                <div class="galery-item" data-index="3"><img src="./asset/galerie/galery3.jpg" alt="Photo 3 de la galerie" loading="lazy" width="600" height="400"></div>
+                <div class="galery-item" data-index="4"><img src="./asset/galerie/galery4.jpg" alt="Photo 4 de la galerie" loading="lazy" width="600" height="400"></div>
+                <div class="galery-item" data-index="5"><img src="./asset/galerie/galery5.jpg" alt="Photo 5 de la galerie" loading="lazy" width="600" height="400"></div>
+                <div class="galery-item" data-index="6"><img src="./asset/galerie/galery7.jpg" alt="Photo 6 de la galerie" loading="lazy" width="600" height="400"></div>
+                <div class="galery-item" data-index="7"><img src="./asset/galerie/galery8.jpg" alt="Photo 7 de la galerie" loading="lazy" width="600" height="400"></div>
+                <div class="galery-item" data-index="8"><img src="./asset/galerie/galery9.jpg" alt="Photo 8 de la galerie" loading="lazy" width="600" height="400"></div>
+                <div class="galery-item" data-index="9"><img src="./asset/galerie/galery10.jpg" alt="Photo 9 de la galerie" loading="lazy" width="600" height="400"></div>
+                <div class="galery-item" data-index="10"><img src="./asset/galerie/galery11.jpg" alt="Photo 10 de la galerie" loading="lazy" width="600" height="400"></div>
+                <div class="galery-item" data-index="11"><img src="./asset/galerie/galery12.jpg" alt="Photo 11 de la galerie" loading="lazy" width="600" height="400"></div>
+                <div class="galery-item" data-index="12"><img src="./asset/galerie/galery13.jpg" alt="Photo 12 de la galerie" loading="lazy" width="600" height="400"></div>
+                <div class="galery-item" data-index="13"><img src="./asset/galerie/gakery14.jpg" alt="Photo 13 de la galerie" loading="lazy" width="600" height="400"></div>
+                <div class="galery-item" data-index="14"><img src="./asset/galerie/galery15.jpg" alt="Photo 14 de la galerie" loading="lazy" width="600" height="400"></div>
             </div>
         </Section>    
     </main>
@@ -77,7 +85,7 @@
         </figure>
     </footer>
     
-    <script src="./js/galery.js"></script>
-    <script src="./js/pages.js"></script>
+    <script type="module" src="./js/galery.js"></script>
+    <script type="module" src="./js/pages.js"></script>
 </body>
 </html>
