--- a/menu.html
+++ b/menu.html
@@ -2,49 +2,59 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-   
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Découvrez la carte du Restaurant LGC: burgers, pizzas, salades, desserts et menus enfant.">
+    <meta name="robots" content="index,follow">
+    <meta name="theme-color" content="#4740F9">
+    <meta name="color-scheme" content="light">
+    <meta property="og:locale" content="fr_FR">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Restaurant LGC – Notre carte">
+    <meta property="og:description" content="Burgers, pizzas, salades et plus. Une explosion de saveurs maison.">
+    <meta property="og:url" content="/menu.html">
+    <meta property="og:image" content="/asset/burger-menu1.png">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/android-chrome-512x512.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="favicon/site.webmanifest">
     <link rel="stylesheet" href="./css/menu.css">
     <script src="https://kit.fontawesome.com/6009bb56e6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fontawesome.com/icons/star?f=classic&s=solid">
-    <title>Restaurant LGC</title>
+    <title>Restaurant LGC – Notre carte</title>
 </head>
 <body>
+    <a href="#contenu" class="skip-link">Aller au contenu principal</a>
     <header>
             <figure class="logo">
                 <figcaption>
-                     <a href="./index.html"><img src="./asset/logo_lgc.png" alt="La grande classe"></a>
+                     <a href="./index.html"><img src="./asset/logo_lgc.png" alt="Logo La cantine LGC"></a>
                 </figcaption>
             </figure>
-            <nav>
+            <nav id="menu-principal" aria-label="Navigation principale">
                 <ul>
                     <li><a href="./index.html" class="nav-link">Accueil</a></li>
-                    <li class="separateur"></li>
-                    <li><a href="./menu.html" class="nav-link active">Menu</a></li>
-                    <li class="separateur"></li>
+                    <li class="separateur" aria-hidden="true" role="presentation"></li>
+                    <li><a href="./menu.html" class="nav-link active" aria-current="page">Menu</a></li>
+                    <li class="separateur" aria-hidden="true" role="presentation"></li>
                     <li><a href="./reservation.html" class="nav-link">Reservation</a></li>
-                    <li class="separateur"></li>
+                    <li class="separateur" aria-hidden="true" role="presentation"></li>
                     <li><a href="./galerie.html" class="nav-link">Galerie</a></li>
-                    <li class="separateur"></li>
+                    <li class="separateur" aria-hidden="true" role="presentation"></li>
                     <li><a href="./apropos.html" class="nav-link">A propos</a></li>
-                    <li class="separateur"></li>
+                    <li class="separateur" aria-hidden="true" role="presentation"></li>
                     <li><a href="./contact.html" class="nav-link">Contact</a></li>
-                    <li class="last-separateur"></li>
+                    <li class="last-separateur" aria-hidden="true" role="presentation"></li>
                 </ul>
                 <button type="button" class="btn-command">Commander</button>
             </nav>
-            <div class="burger-menu">
+            <button class="burger-menu" type="button" aria-label="Ouvrir le menu" aria-controls="menu-principal" aria-expanded="false">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
-            </div>
+            </button>
     </header>
     <!--Mon main -->
-    <main>
+    <main id="contenu">
            <section class="premiere-section">
                 <aside>
                     <a href="./menu.html"><h2><img src="./asset/carte.png" alt="icone de carte">Notre carte</h2></a> 
@@ -72,42 +82,42 @@
                             <figcaption>
                                 <h3>Nos burgers</h3>
                             </figcaption>
-                            <a href="./burger.html"><img src="./asset/burger-menu1.png" alt="burger"></a>
+                            <a href="./burger.html"><img src="./asset/burger-menu1.png" alt="burger" loading="lazy" width="600" height="600"></a>
                         </figure>
                         <figure>
                             <figcaption>
                                 <h3>Menu enfant</h3>
                             </figcaption>
-                            <a href="./menuEnfant.html"><img src="./asset/menu.png" alt=""></a>
+                            <a href="./menuEnfant.html"><img src="./asset/menu.png" alt="Menu enfant" loading="lazy" width="600" height="600"></a>
                         </figure>
                         <figure>
                             <figcaption>
                                 <h3>Sandwichs</h3>
                             </figcaption>
-                            <a href="./sandwich.html"><img src="./asset/sandwich.jpg" alt=""></a>
+                            <a href="./sandwich.html"><img src="./asset/sandwich.jpg" alt="Sandwichs" loading="lazy" width="600" height="600"></a>
                         </figure>
                         <figure>
                             <figcaption>
                                 <h3>Nos pizzas</h3>
                             </figcaption>
-                            <a href="./pizza.html"><img src="./asset/pizza1.png" alt=""></a>
+                            <a href="./pizza.html"><img src="./asset/pizza1.png" alt="Pizzas" loading="lazy" width="600" height="600"></a>
                         </figure>
                         <figure>
                             <figcaption>
                                 <h3>Nos salades</h3>
                             </figcaption>
-                            <a href="./salade.html"><img src="./asset/salades.jpg" alt=""></a>
+                            <a href="./salade.html"><img src="./asset/salades.jpg" alt="Salades" loading="lazy" width="600" height="600"></a>
                         </figure>
                         <figure>
                             <figcaption>
                                 <h3>Nos boissons</h3>
                             </figcaption>
-                            <a href="./boisson.html"><img src="./asset/boisson.png" alt=""></a>
+                            <a href="./boisson.html"><img src="./asset/boisson.png" alt="Boissons" loading="lazy" width="600" height="600"></a>
                         </figure>
                     </div>
                     <div class="section-plat">
                         <figure>
-                            <a href="./menuEnfant.html"><img src="./asset/peter-pham-v5yVy3IhSRU-unsplash.jpg" alt=""></a>
+                            <a href="./menuEnfant.html"><img src="./asset/peter-pham-v5yVy3IhSRU-unsplash.jpg" alt="Plat du jour" loading="lazy" width="1200" height="800"></a>
                         </figure>
                         <div class="description-plat">
                             <h2>Plat du jour</h2>
@@ -181,7 +191,7 @@
             </figcaption>
         </figure>
     </footer>
-    <script src="./js/pages.js"></script>
-    <script src="/js/avis.js"></script>
+    <script type="module" src="./js/pages.js"></script>
+    <script type="module" src="./js/avis.js"></script>
 </body>
 </html>
